Fixed size of bg image in header and alignment of images in the gallery

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -17,6 +17,9 @@ body {
 .container {
     margin: 0 auto;
     max-width: 1440px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
 }
 //Flexbox 
 .flex {
